[gd_scene load_steps=15 format=3 uid="uid://dn4j8tjl4x3a5"]

[ext_resource type="Script" uid="uid://cbr6v7s2kgc1c" path="res://scenes/GameUI/gameui.gd" id="1_23st4"]
[ext_resource type="LabelSettings" uid="uid://b6283bfmg3fk7" path="res://label75.tres" id="2_8rkdi"]
[ext_resource type="Texture2D" uid="uid://dhcfq1juug1ru" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/textGetReady.png" id="3_kxs1x"]
[ext_resource type="Texture2D" uid="uid://c42nhwabeqalv" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/tapTick.png" id="4_bs6vm"]
[ext_resource type="Texture2D" uid="uid://i226rtrqfqpn" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/textGameOver.png" id="5_tl2o1"]
[ext_resource type="Texture2D" uid="uid://bs0v2bu31y61k" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/UIbg.png" id="6_nsnhp"]
[ext_resource type="LabelSettings" uid="uid://c5b482atvxnoy" path="res://label_32_yellow.tres" id="7_wcxo5"]
[ext_resource type="Texture2D" uid="uid://b2akkjgeahful" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/medalBronze.png" id="8_ixmw0"]
[ext_resource type="Texture2D" uid="uid://duxaechd3165o" path="res://Flappy+Bird+Clone+Assets/Assets/Sprites/UI/buttonLarge.png" id="9_5ilbf"]
[ext_resource type="FontFile" uid="uid://due6jbyye53ld" path="res://Flappy+Bird+Clone+Assets/Assets/Fonts/font_score.ttf" id="10_wgs0l"]

[sub_resource type="LabelSettings" id="LabelSettings_xyjck"]
font = ExtResource("10_wgs0l")
font_size = 50
outline_size = 16
outline_color = Color(0.9350917, 0.5626955, 0.24893415, 1)

[sub_resource type="Animation" id="Animation_ky6u3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8ku2r"]
resource_name = "play"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/StartMenu/TextureRect2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(2, 2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4eka8"]
_data = {
&"RESET": SubResource("Animation_ky6u3"),
&"play": SubResource("Animation_8ku2r")
}

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_23st4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "0"
label_settings = ExtResource("2_8rkdi")

[node name="StartMenu" type="Control" parent="MarginContainer"]
custom_minimum_size = Vector2(450, 180)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 73.0
grow_horizontal = 2
texture = ExtResource("3_kxs1x")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/StartMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.66400003
anchor_right = 0.5
anchor_bottom = 0.66400003
offset_left = -29.5
offset_top = -30.520004
offset_right = 29.5
offset_bottom = 28.479996
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_bs6vm")

[node name="GameOverMenu" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("5_tl2o1")

[node name="Panel" type="TextureRect" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
texture = ExtResource("6_nsnhp")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "medal"
label_settings = ExtResource("7_wcxo5")
horizontal_alignment = 1

[node name="MedalImg" type="TextureRect" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("8_ixmw0")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "score"
label_settings = ExtResource("7_wcxo5")
horizontal_alignment = 1

[node name="CurrentScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("2_8rkdi")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "best"
label_settings = ExtResource("7_wcxo5")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="MarginContainer/GameOverMenu/Panel/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "50"
label_settings = ExtResource("2_8rkdi")
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="MarginContainer/GameOverMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_5ilbf")

[node name="Label" type="Label" parent="MarginContainer/GameOverMenu/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.5
offset_right = 50.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
label_settings = SubResource("LabelSettings_xyjck")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4eka8")
}
autoplay = "play"

[connection signal="pressed" from="MarginContainer/GameOverMenu/PlayButton" to="." method="_on_play_button_pressed"]
